--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     #controls { margin-bottom: 10px; }
+    #controls button { margin-right: 5px; }
   </style>
 </head>
 <body>
@@ -16,6 +17,7 @@
   <div id="controls">
     <button id="add-network">Add Network</button>
     <button id="download-json">Export JSON</button>
+    <button id="show-columns">Show All Columns</button>
   </div>
   <div id="network-table"></div>
 
@@ -84,24 +86,33 @@
       }
     ];
 
-    // create Tabulator on DOM element with id "network-table"
+    // create Tabulator
     const table = new Tabulator("#network-table", {
       data: tableData,
       layout: "fitColumns",
       reactiveData: true,
       addRowPos: "top",
       height: "600px",
+      columnHeaderContextMenu: [
+        {
+          label: "Hide Column",
+          action: function (e, column) {
+            column.hide();
+          }
+        }
+      ],
       columns: [
-        { title: "Name", field: "name", editor: "input", headerFilter: "input" },
-        { title: "Region/Site", field: "region", editor: "input", headerFilter: "input" },
-        { title: "Location", field: "location", editor: "input", headerFilter: "input" },
-        { title: "CIDR Range", field: "cidr", editor: "input", headerFilter: "input", validator: ["required", { type: "regex", regex: /^(?:\d{1,3}\.){3}\d{1,3}\/(?:[0-9]|[12][0-9]|3[0-2])$/ }] },
-        { title: "VLAN ID", field: "vlan", editor: "number", headerFilter: "number" },
-        { title: "Status", field: "status", editor: "list", editorParams: { values: { "In use":"In use", "Deprecated":"Deprecated", "Legacy":"Legacy", "Decommissioned":"Decommissioned", "Proposed":"Proposed", "Future State":"Future State" } }, headerFilter: "select", headerFilterParams: { values: { "":"(all)", "In use":"In use", "Deprecated":"Deprecated", "Legacy":"Legacy", "Decommissioned":"Decommissioned", "Proposed":"Proposed", "Future State":"Future State" } } },
-        { title: "Description", field: "description", editor: "textarea", headerFilter: "input" },
-        { title: "Tags", field: "tags", formatter: "list", formatterParams: { delimiter: "," }, editor: "input", headerFilter: "input" },
-        { title: "IP Range", field: "ip_range", hozAlign: "center" },
-        { title: "# IPs", field: "num_ips", hozAlign: "center", sorter: "number" }
+        { title: "Name", field: "name", editor: "input", headerFilter: "input", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Region/Site", field: "region", editor: "input", headerFilter: "input", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Location", field: "location", editor: "input", headerFilter: "input", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "CIDR Range", field: "cidr", editor: "input", headerFilter: "input", validator: ["required", { type: "regex", regex: /^(?:\d{1,3}\.){3}\d{1,3}\/(?:[0-9]|[12][0-9]|3[0-2])$/ }], headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "VLAN ID", field: "vlan", editor: "number", headerFilter: "number", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Status", field: "status", editor: "list", editorParams: { values: { "In use":"In use", "Deprecated":"Deprecated", "Legacy":"Legacy", "Decommissioned":"Decommissioned", "Proposed":"Proposed", "Future State":"Future State" } }, headerFilter: "select", headerFilterParams: { values: { "":"(all)", "In use":"In use", "Deprecated":"Deprecated", "Legacy":"Legacy", "Decommissioned":"Decommissioned", "Proposed":"Proposed", "Future State":"Future State" } }, headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Description", field: "description", editor: "textarea", headerFilter: "input", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Tags", field: "tags", formatter: "list", formatterParams: { delimiter: "," }, editor: "input", headerFilter: "input", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "IP Range", field: "ip_range", hozAlign: "center", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "# IPs", field: "num_ips", hozAlign: "center", sorter: "number", headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }] },
+        { title: "Actions", field: "actions", formatter: "buttonCross", width: 50, hozAlign: "center", headerSort: false, headerMenu: [{ label: "Hide Column", action: (e, column) => column.hide() }], cellClick: function (e, cell) { cell.getRow().delete(); } }
       ]
     });
 
@@ -109,20 +120,19 @@
     table.on("cellEdited", (cell) => {
       if (cell.getField() === "cidr") {
         const newCidr = cell.getValue();
-        const row = cell.getRow();
-        row.update({
+        cell.getRow().update({
           ip_range: formatIpRange(newCidr),
           num_ips: countIps(newCidr)
         });
       }
     });
 
-    // button to add a blank row
+    // Add row button
     document.getElementById("add-network").addEventListener("click", () => {
       table.addRow({ name: "", region: "", location: "", cidr: "", vlan: null, status: "Proposed", description: "", tags: "", ip_range: "", num_ips: "" });
     });
 
-    // button to export data as JSON
+    // Export JSON button
     document.getElementById("download-json").addEventListener("click", () => {
       const data = table.getData();
       const blob = new Blob([JSON.stringify(data, null, 2)], { type: "application/json" });
@@ -134,6 +144,11 @@
       link.click();
       document.body.removeChild(link);
       URL.revokeObjectURL(url);
+    });
+
+    // Show all columns button
+    document.getElementById("show-columns").addEventListener("click", () => {
+      table.getColumns().forEach(col => col.show());
     });
   </script>
 </body>
