--- a/index.html
+++ b/index.html
@@ -6,25 +6,12 @@
   <title>CIDR Sheet</title>
   <link href="https://unpkg.com/tabulator-tables@5.4.3/dist/css/tabulator.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    #controls { margin-bottom: 10px; }
-    .dropdown { position: relative; display: inline-block; }
-    .dropdown-content { display: none; position: absolute; background: #fff; min-width: 160px; box-shadow: 0 8px 16px rgba(0,0,0,0.2); border-radius: 4px; z-index: 1; }
-    .dropdown-content button { background: none; color: #333; padding: 8px 16px; text-align: left; width: 100%; border: none; cursor: pointer; }
-    .dropdown-content button:hover { background: #f0f0f0; }
-    #intro { background: #f9f9f9; padding: 10px; border: 1px solid #ddd; border-radius: 4px; margin-bottom: 10px; }
-    .toggle-btn { background: none; border: none; cursor: pointer; font-size: 1.2rem; vertical-align: middle; margin-right: 8px; }
-    .toggle-btn:focus { outline: 2px solid #007BFF; }
-    #intro-header { display: flex; align-items: center; margin-bottom: 5px; }
-    #intro-header h2 { margin: 0; font-size: 1rem; font-weight: normal; color: #333; }
-  </style>
 </head>
 <body>
   <h1>CIDR Sheet Network Manager</h1>
   <div id="intro-header">
     <button id="intro-toggle" class="toggle-btn" aria-label="Toggle introduction" title="Toggle introduction">&#9650;</button>
-    <h2>Introduction (click arrow to collapse)</h2>
+    <h2>Introduction</h2>
   </div>
   <div id="intro">
     <p>This tool helps you manage and document your network CIDR ranges. Enter network details, calculate IP ranges and counts automatically, and customize your view.</p>
