--- a/index.html
+++ b/index.html
@@ -52,10 +52,22 @@
       function countIps(cidr) { return cidr?Math.pow(2,32-parseInt(cidr.split('/')[1],10)):''; }
 
       // Decode initial state
-      const defaultData = [{ name:"Enter a name", region:"Enter a region", location:"Enter a location", cidr:"10.0.0.0/8", vlan:1, status:"Proposed", description:"Enter a description", tags:"Enter tags", ip_range:formatIpRange("10.0.0.0/8"), num_ips:countIps("10.0.0.0/8") }];
+      const defaultData = [{
+        name:"Enter a name",
+        region:"Enter a region",
+        location:"Enter a location",
+        cidr:"10.0.0.0/8",
+        vlan:1,
+        status:"Proposed",
+        dns_domain:"example.local", // NEW FIELD in data model (placed after status)
+        description:"Enter a description",
+        tags:"Enter tags",
+        ip_range:formatIpRange("10.0.0.0/8"),
+        num_ips:countIps("10.0.0.0/8")
+      }];
       function decodeState() {
         if(location.hash.startsWith('#data=')){
-          try { return JSON.parse(atob(location.hash.slice(6))); } catch {};
+          try { return JSON.parse(atob(location.hash.slice(6))); } catch {}
         }
         return { data: defaultData, cols: null, introVisible: true };
       }
@@ -90,6 +102,8 @@
           {title:"CIDR Range", field:"cidr", editor:"input", validator:["required",{type:"regex",regex:/^(?:\d{1,3}\.){3}\d{1,3}\/(?:[0-9]|[12][0-9]|3[0-2])$/}], headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"VLAN ID", field:"vlan", editor:"number", headerFilter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Status", field:"status", editor:"list", editorParams:{values:{"In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerFilter:"select", headerFilterParams:{values:{"":"(all)","In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          // NEW COLUMN (after Status, before Description)
+          {title:"DNS Domain", field:"dns_domain", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Description", field:"description", editor:"textarea", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Tags", field:"tags", formatter:"list", formatterParams:{delimiter:","}, editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"IP Range", field:"ip_range", hozAlign:"center", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
@@ -117,15 +131,34 @@
       });
 
       // Controls
-      document.getElementById("add-network").addEventListener("click", () => table.addRow({ name:"", region:"", location:"", cidr:"", vlan:null, status:"Proposed", description:"", tags:"", ip_range:"", num_ips:"" }));
+      document.getElementById("add-network").addEventListener("click", () => table.addRow({ name:"", region:"", location:"", cidr:"", vlan:null, status:"Proposed", dns_domain:"", description:"", tags:"", ip_range:"", num_ips:"" }));
       document.getElementById("load-json").addEventListener("click", () => { const input = document.getElementById("file-input"); input.accept = ".json"; input.click(); });
-      document.getElementById("file-input").addEventListener("change", e => { const file = e.target.files[0]; if(!file) return; const reader = new FileReader(); reader.onload = ev => { try { table.replaceData(JSON.parse(ev.target.result)); } catch { alert("Invalid JSON file"); } }; reader.readAsText(file); });
+      document.getElementById("file-input").addEventListener("change", e => {
+        const file = e.target.files[0]; if(!file) return;
+        const reader = new FileReader();
+        reader.onload = ev => {
+          try {
+            let data = JSON.parse(ev.target.result);
+            if(Array.isArray(data)) {
+              // migrate any rows missing dns_domain
+              data = data.map(r => ({ dns_domain:"", ...r }));
+            }
+            table.replaceData(data);
+          } catch { alert("Invalid JSON file"); }
+        };
+        reader.readAsText(file);
+      });
 
       // Export/Share
       const expBtn = document.getElementById("export-share"), menu = document.querySelector(".dropdown-content");
       expBtn.addEventListener("click", e => { e.stopPropagation(); menu.style.display = menu.style.display === 'block' ? 'none' : 'block'; });
       document.addEventListener("click", () => menu.style.display = 'none');
-      document.getElementById("download-json").addEventListener("click", () => { const blob = new Blob([JSON.stringify(table.getData(), null, 2)], { type: "application/json" }); const url = URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "networks.json"; document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url); });
+      document.getElementById("download-json").addEventListener("click", () => {
+        const blob = new Blob([JSON.stringify(table.getData(), null, 2)], { type: "application/json" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a"); a.href = url; a.download = "networks.json";
+        document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
+      });
       document.getElementById("download-csv").addEventListener("click", () => table.download("csv", "networks.csv"));
       document.getElementById("share-link").addEventListener("click", () => {
         const cols = table.getColumns().map(col => ({ field: col.getField(), visible: col.isVisible(), width: col.getWidth() }));
